[gd_scene load_steps=11 format=3 uid="uid://dk8bv3g3m7esr"]

[ext_resource type="Script" path="res://endgame.gd" id="1_u6ffd"]
[ext_resource type="Texture2D" uid="uid://c5dg7daax7oy3" path="res://background.png" id="2_isi8w"]
[ext_resource type="FontFile" uid="uid://dx3k6gvhn6tbd" path="res://Texture/Symtext.ttf" id="3_nqgdd"]
[ext_resource type="AudioStream" uid="uid://qg7qx6idjshu" path="res://doggysoundtrack.mp3" id="4_w16a4"]
[ext_resource type="Script" path="res://AudioStreamPlayer2D.gd" id="5_jjsu6"]
[ext_resource type="FontFile" uid="uid://bbvng6aev8qdq" path="res://Texture/DePixelKlein.ttf" id="6_buj7c"]

[sub_resource type="Theme" id="Theme_awwae"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0045n"]
bg_color = Color(1, 0.870588, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mc2kt"]
bg_color = Color(1, 0.870588, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s70an"]
bg_color = Color(1, 0.870588, 0, 1)

[node name="Endgame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u6ffd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 184.0
texture = ExtResource("2_isi8w")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 72.0
offset_right = 232.0
offset_bottom = 176.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_awwae")
theme_override_colors/font_hover_color = Color(1, 0.027451, 0.760784, 1)
theme_override_fonts/font = ExtResource("3_nqgdd")
theme_override_styles/hover = SubResource("StyleBoxFlat_0045n")
text = "restart"

[node name="GoMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_awwae")
theme_override_colors/font_hover_color = Color(1, 0.027451, 0.760784, 1)
theme_override_fonts/font = ExtResource("3_nqgdd")
theme_override_styles/hover = SubResource("StyleBoxFlat_mc2kt")
text = "go to menu"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_awwae")
theme_override_colors/font_hover_color = Color(1, 0.027451, 0.760784, 1)
theme_override_fonts/font = ExtResource("3_nqgdd")
theme_override_styles/hover = SubResource("StyleBoxFlat_s70an")
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_w16a4")
script = ExtResource("5_jjsu6")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 32.0
offset_right = 320.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.223529, 0.223529, 1)
theme_override_fonts/font = ExtResource("6_buj7c")
theme_override_font_sizes/font_size = 9
text = "The game has ended
Your score: "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GoMenu" to="." method="_on_go_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
